# swizzles

./: .gitmodules  CMakeLists.txt  README.md
libs/: tt.hpp
src/: assert.hpp  globals.cpp  globals.hpp  main.cpp  score.hpp  sort.hpp  tt.hpp  ttentry.hpp  util.hpp
src/chess/: attackers.cpp  bitboard.hpp  calculate_hash.cpp  captures.cpp  check_evasions.cpp  checkers.cpp  colour.hpp  count_moves.cpp  get_fen.cpp  is_attacked.cpp  is_legal.cpp  is_pseudolegal.cpp  king_allowed.cpp  legal_captures.cpp  legal_moves.cpp  legal_noncaptures.cpp  magic.cpp  magic.hpp  makemove.cpp  move.hpp  movegen.cpp  movegen.hpp  movelist.hpp  passed.hpp  perft.cpp  piece.hpp  pinned.cpp  position.hpp  predict_hash.cpp  see.cpp  see.hpp  set_fen.cpp  side.hpp  square.hpp  square_attacked.cpp  squares_attacked.cpp  undomove.cpp  validate.hpp  zobrist.cpp  zobrist.hpp
src/eval/: eval.cpp  eval.hpp  king_safety.hpp  mobility.hpp  phase.cpp  phase.hpp  pst.hpp  values.hpp
src/options/: spin.hpp  string.hpp
src/search/: alphabeta.cpp  alphabeta.hpp  constants.hpp  controller.hpp  is_endgame.hpp  pv.cpp  pv.hpp  qsearch.cpp  qsearch.hpp  reduction.hpp  search.cpp  search.hpp  see.cpp  see.hpp  stack.hpp
src/swizzles/: main.cpp  score.hpp  settings.cpp  settings.hpp  ttentry.hpp
src/swizzles/eval/: eval.cpp  eval.hpp  pst.cpp  pst.hpp
src/swizzles/search/: constants.hpp  controller.hpp  pv.hpp  qsearch.cpp  qsearch.hpp  results.hpp  root.cpp  root.hpp  search.cpp  search.hpp  settings.hpp  sort.cpp  sort.hpp  stack.hpp  thread_data.hpp
src/swizzles/uci/: go.cpp  listen.cpp  moves.cpp  parse.cpp  position.cpp  setoption.cpp  state.hpp  uci.hpp  ucinewgame.cpp
src/tests/chess/: counters.cpp  fen.cpp  is_pseudolegal.cpp  perft.cpp  perft960.cpp  perft_shallow.cpp  see.cpp  threefold.cpp  validate.cpp  zobrist.cpp
src/tests/search/: 50moves.cpp  mates.cpp  movetime.cpp  stalemate.cpp  tactics.cpp  underpromote.cpp
src/tests/uci/: moves.cpp  position.cpp  quit.cpp
src/tools/: bench_perft.cpp  bench_search.cpp  perft.cpp  split.cpp
src/uci/: listen.cpp  moves.cpp  parse.cpp  position.cpp  search.cpp  setoption.cpp  uci.cpp  uci.hpp  ucinewgame.cpp
src/uci/extensions/: display.cpp  eval.cpp  extensions.hpp  perft.cpp  split.cpp
src/uci/options/: combo.hpp  spin.hpp
tests/: main.cpp  see.cpp  uci.cpp
tests/chess/: checkers.cpp  consistency.cpp  draw.cpp  fen.cpp  hash.cpp  in_check.cpp  is_capture.cpp  is_legal.cpp  iterator.cpp  legal_moves.cpp  movegen.cpp  parse_move.cpp  passed_pawns.cpp  perft.cpp  pinned.cpp  squares_attacked.cpp
tests/eval/: known.cpp  mirror.cpp  range.cpp
tests/search/: 50moves.cpp  fastmate.cpp  mates.cpp  movetime.cpp  stalemate.cpp  underpromote.cpp
